--- a/website/src/index.css
+++ b/website/src/index.css
@@ -66,13 +66,8 @@ body {
   color: #000000;
 }
 
-.nav-link:hover::before,
-.nav-link.active::before {
+.nav-link:hover::before {
   border-color: #1a1a1a;
-}
-
-.nav-link.active {
-  color: #000000;
 }
 
 .title {
