--- a/website/src/index.css
+++ b/website/src/index.css
@@ -71,8 +71,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   border: 2px solid transparent;
   transition: border-color 0.3s;
 }
@@ -268,7 +268,17 @@ body {
   opacity: 0;
   animation: fadeIn 0.3s ease forwards;
   margin-right: auto;
-  padding-left: 0;
+  padding: 0.4rem 1rem 0.3rem 0.7rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.back-link .arrow {
+  font-size: 1.2rem;
+  line-height: 1;
+  position: relative;
+  top: -1px;
 }
 
 .navbar::before {
