--- a/website/src/styles/Projects.css
+++ b/website/src/styles/Projects.css
@@ -1,10 +1,5 @@
 .projects {
-  background: linear-gradient(
-    180deg,
-    #0d0d0d 0%,
-    #150920 50%,
-    #0d0d0d 100%
-  );
+  background-color: #0f0f0f;
 }
 
 .projects-grid {
